--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <main>
             <div class="h-100 overflow-y-auto ">
                 <!-- div blue -->
+
                 <div class="container-fluid">
-                    <div class="blue-bg"></div>
                     <div class="row">
                         <div class="col-12 col-lg-8">
                             <!-- prossime classi section -->
@@ -37,122 +37,167 @@
                                     <thead>
                                       <tr>
                                         <th scope="col">Nome</th>
-                                        <th scope="col">Data inizio</th>
-                                        <th scope="col">ROI</th>
+                                        <th class="mobile-none" scope="col">Data inizio</th>
+                                        <th class="mobile-none" scope="col">ROI</th>
                                         <th scope="col">Stato</th>
                                         <th scope="col">Azioni</th>
                                       </tr>
                                     </thead>
                                     <tbody>
                                         <!-- classe 75 -->
-                                        <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 75</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                        <tr class="fw-semibold">
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 75</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-success">Done</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 76 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 76</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 76</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-success">Done</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 77 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 77</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 77</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-warning text-white">process</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 78 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 78</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 78</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-success">Done</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 79 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 79</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 79</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-danger">failed</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 80 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 80</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 80</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-success">Done</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 81 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 81</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 81</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-danger">failed</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                         <!-- classe 82 -->
                                         <tr class="fw-semibold ">
-                                            <td><img src="img/class-avatar.jpg" alt=""> Classe 82</td>
-                                            <td class="data">15 Feb 2021</td>
-                                            <td>20%</td>
+                                            <td><img class="avatar-container" src="img/class-avatar.jpg" alt=""> Classe 82</td>
+                                            <td class="data mobile-none">15 Feb 2021</td>
+                                            <td class="mobile-none">20%</td>
                                             <td><span class="badge text-bg-success">Done</span></td>
-                                            <td><a href=""><i class="fa-solid fa-pencil"></a></i> <a href=""><i class="fa-solid fa-trash"></i></a></td>
+                                            <td><button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button><button type="button" class="btn btn-outline-secondary trash-icon"><i class="fa-solid fa-trash"></i></button></td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
+                            <!-- faq sectiob -->
                             <div class="card">
                                 <div class="card-header">
                                     <h2>F.A.Q.</h2>
                                 </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                </ul>
+                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                            Come aggiungere un nuovo studente?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Clicca sul + in alto nella sezione blu.</div>
+                                      </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                          Come posso accedere alle informazioni del mio account?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Clicca sull'icona della campanella.</div>
+                                      </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                            Posso usare questa dashboard da mobile?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Certo!</div>
+                                      </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <!-- todo list -->
                         <div class="col-12 col-lg-4">
                             <div class="card">
                                 <div class="card-header">
                                     <h2>Todo</h2>
                                 </div>
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
+                                    <ul class="ldg-padding-list list-group">
+                                        <li class="list-group-item">
+                                          <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                                          <label class="form-check-label" for="firstCheckbox">Kickoff nuove classi</label>
+                                        </li>
+                                        <li class="list-group-item">
+                                          <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                                          <label class="form-check-label" for="secondCheckbox">Lezione su Bootstrap 5 in classe #75</label>
+                                        </li>
+                                        <li class="list-group-item">
+                                          <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                                          <label class="form-check-label" for="thirdCheckbox">Controllare username github studenti</label>
+                                        </li>
+                                      </ul>
                                 </ul>
                             </div>
-
+                            <!-- graphic section -->
                             <div class="card">
                                 <div class="card-header">
                                     <h2></h2>
                                 </div>
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
+                                    <ul class="ldg-padding-list list-group">
+                                        <li class="list-group-item">
+                                            <img class="graph-img" src="img/stats.jpeg" alt="">
+                                            <h5>Utenti Attivi</h5>
+                                            <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                        </li>
+                                        <li class="list-group-item ldg-small-text">Gennaio: 1200</li>
+                                        <li class="list-group-item ldg-small-text">Febbraio: 800</li>
+                                        <li class="list-group-item ldg-small-text">Marzo: 1500</li>
+                                        <li class="list-group-item ldg-small-text"><a href="">Visualizza report approfondito</a></li>
+                                      </ul>
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 col-lg-8"></div>
-                        <div class="col-12 col-lg-4"></div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
