--- a/index.html
+++ b/index.html
@@ -35,12 +35,102 @@
         <main>
             <div class="h-100 overflow-y-auto ">
                 <!-- div blue -->
-                <div class="ldg-bg-blue">
+                <div class="ldg-bg-blue text-white ">
                     <div class="row d-flex flex-wrap">
-                        <div class="order-1 col-12 col-md-4">boolean</div>
-                        <div class="order-2 col-12 col-md-4">studenti</div>
-                        <div class="order-0 col-12 col-md-4">nuovo</div>
+                        <div class="order-md-2 col-12 col-md-4 pt-4">Nuovo Studente <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class="btn btn-outline-light" href=""><i class="fa-solid fa-plus"></i></button></div>
+                        <div class="order-md-0 col-12 col-md-4 p-4 fs-3 ">Boolean</div>
+                        <div class="order-md-1 col-12 col-md-4 pt-4">Studenti online negli ultimi 30 minuti <br> <span class="fs-5">125</span></div>
                     </div>
+                    <!-- off canvas new student -->
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header">
+                          <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <form>
+                                <div class="row">
+                                    <div class="col-12 col-md-6">
+                                        <div class="mb-3">
+                                            <label for="name" class="form-label">Name</label>
+                                            <input type="name" class="form-control" id="name" aria-describedby="namehelp">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6">
+                                        <div class="mb-3">
+                                            <label for="surname" class="form-label">Cognome</label>
+                                            <input type="surname" class="form-control" id="surname">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 col-md-6">
+                                        <p class="ldg-bottom">Email</p>
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="basic-addon1">@</span>
+                                            <input type="text" class="form-control"aria-label="Username" aria-describedby="basic-addon1">
+                                          </div>
+                                    </div>
+                                    <div class="col-12 col-md-6">
+                                        <div class="mb-3">
+                                            <label for="password" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="password">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="mb-3">
+                                            <label for="address" class="form-label">Indirizzo</label>
+                                            <input type="address" class="form-control" id="address">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 col-md-6">
+                                        <div class="mb-3">
+                                            <label for="city" class="form-label">Città</label>
+                                            <input type="city" class="form-control" id="city">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <div class="mb-3">
+                                            <label for="stato" class="form-label">Stato</label>
+                                            <input type="stato" class="form-control" id="stato">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-2">
+                                        <div class="mb-3">
+                                            <label for="cap" class="form-label">CAP</label>
+                                            <input type="cap" class="form-control" id="cap">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="mb-3">
+                                            <label for="formFile" class="form-label">Foto</label>
+                                            <input class="form-control" type="file" id="formFile">
+                                          </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" id="gridCheck">
+                                            <label class="form-check-label" for="gridCheck">Seleziona per proseguire</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <button type="button" class="btn btn-primary">Salva</button>
+                                        <button type="button" class="btn btn-warning">Svuota</button>
+                                    </div>
+                                </div>
+                              </form>
+                        </div>
+                      </div>
                 </div>
                 <div class="container-fluid">
                     <div class="row">
