--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
                 <div class="ldg-bg-blue text-white ">
                     <div class="row d-flex flex-wrap">
                         <div class="order-md-2 col-12 col-md-4 pt-4">Nuovo Studente <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class="btn btn-outline-light" href=""><i class="fa-solid fa-plus"></i></button></div>
-                        <div class="order-md-0 col-12 col-md-4 p-4 fs-3 ">Boolean</div>
+                        <div class="order-md-0 col-12 col-md-4 p-4 fs-3 ">
+                            Boolean
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href=""> Piano blaze</a><br>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">3 app</a>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">Boolean mobile app</a>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">Boolean web app</a>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">Boolean blog app</a>
+                        </div>
                         <div class="order-md-1 col-12 col-md-4 pt-4">Studenti online negli ultimi 30 minuti <br> <span class="fs-5">125</span></div>
                     </div>
                     <!-- off canvas new student -->
@@ -130,7 +137,7 @@
                                 </div>
                               </form>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="container-fluid">
                     <div class="row">
