--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"crossorigin="anonymous">
     <!-- css -->
@@ -14,14 +18,42 @@
 <body>
     <!-- header -->
     <header class="position-fixed top-0 left-0 w-100 py-2 bg-light">
-        <div class="header-content w-100 bg-white">
-            <h2></h2>
+        <div class="header-content w-100 bg-white d-flex">
+            <img class="ps-3 pb-2 ldg-big-logo" src="img/logo.svg" alt="logo-big">
+            <div class="mobile-logo-container">
+                <img src="img/mobile-logo.png" class="ldg-mobile-logo" alt="">
+            </div>
+            <div class="input-group flex-nowrap ms-3 pb-2">
+                <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-magnifying-glass"></i></span>
+                <input type="text" class="form-control" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="search" aria-describedby="addon-wrapping">
+            </div>
+            <div class="ldg-ul">
+                <ul class="d-flex">
+                    <li class="pe-4 ldg-responsive-ul"><a class="text-decoration-none ldg-gray-text" href="#"><i class="fa-solid fa-list-ul"></i></a></li>
+                    <li class="pe-4 ldg-responsive-ul"><a class="text-decoration-none ldg-gray-text" href="#"><i class="fa-solid fa-circle-question"></i></a></li>
+                    <li class="pe-4 ldg-responsive-ul"><a class="text-decoration-none ldg-gray-text" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a></li>
+                    <li class="pe-4">
+                        <a class="text-decoration-none ldg-gray-text" href="#">
+                            <div class="btn-group">
+                                <a type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-bell"></i> 
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                <li><button class="dropdown-item" type="button">Profilo</button></li>
+                                <li><button class="dropdown-item" type="button">Fatturazione</button></li>
+                                <li><button class="dropdown-item" type="button">Logout</button></li>
+                                </ul>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <div class="ldg-wrapper vh-100 w-100 d-flex ">
         <!-- sidebar -->
         <div id="sidebar" class="d-flex justify-content-between flex-column">
-            <ul class="mt-5">
+            <ul class="ldg-margin-top">
                 <li class="mb-2"><a class="text-decoration-none text-white" href="#home"><i class="fa-solid fa-house"></i> <span>Home</span></a></li>
                 <li class="mb-2"><a class="text-decoration-none text-white" href="#"><i class="fa-solid fa-chart-simple"></i> <span>Stats</span></a></li>
                 <li><a class="text-decoration-none text-white" href="#"><i class="fa-solid fa-signal"></i> <span>Signals</span></a></li>
@@ -33,25 +65,36 @@
         </div>
         <!-- main section -->
         <main>
-            <div class="h-100 overflow-y-auto ">
+            <div class="h-100 overflow-y-auto">
                 <!-- div blue -->
-                <div class="ldg-bg-blue text-white ">
-                    <div class="row d-flex flex-wrap">
-                        <div class="order-md-2 col-12 col-md-4 pt-4">Nuovo Studente <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class="btn btn-outline-light" href=""><i class="fa-solid fa-plus"></i></button></div>
-                        <div class="order-md-0 col-12 col-md-4 p-4 fs-3 ">
-                            Boolean
+                <div class="ldg-bg-blue text-white pt-3">
+                    <div class="ldg-flex-left d-flex flex-wrap justify-content-between text-white mb-2 p-3">
+                        <div id="boolean" class="order-1 order-md-0">
+                            <h1>Boolean</h1>
                             <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href=""> Piano blaze</a><br>
                             <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">3 app</a>
-                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">Boolean mobile app</a>
-                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">Boolean web app</a>
-                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small" href="">Boolean blog app</a>
+                            <i class="fa-solid fa-chevron-right"></i><i class="fa-solid fa-chevron-right"></i>
+                            <a class="ldg-plus text-decoration-none text-white p-1 rounded-circle ldg-bg-header ldg-font-size-small" href=""><i class="fa-solid fa-plus"></i></a>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small ldg-responsive" href="">Boolean mobile app</a>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small ldg-responsive" href="">Boolean web app</a>
+                            <a class="text-decoration-none text-white p-1 rounded-pill ldg-bg-header ldg-font-size-small ldg-responsive" href="">Boolean blog app</a>
                         </div>
-                        <div class="order-md-1 col-12 col-md-4 pt-4">Studenti online negli ultimi 30 minuti <br> <span class="fs-5">125</span></div>
+                        <div id="students-online" class="order-2 order-md-1">
+                            <span>Studenti online negli ultimi 30 minuti</span>
+                            <div class="fs-3 fw-semibold">
+                                125
+                            </div>
+                        </div>
+                        <div id="new-student" class="order-0 order-md-2">
+                            Nuovo Studente<button data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class="btn btn-outline-light ms-2" href=""><i class="fa-solid fa-plus"></i></button>
+                        </div>
                     </div>
                     <!-- off canvas new student -->
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" style="width: 700px;">
                         <div class="offcanvas-header">
-                          <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                          <h5 class="offcanvas-title" 
+                          
+                          id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
                           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
@@ -139,6 +182,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- main section -->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 col-lg-8">
@@ -227,7 +271,7 @@
                                     </table>
                                 </div>
                             </div>
-                            <!-- faq sectiob -->
+                            <!-- faq section -->
                             <div class="card">
                                 <div class="card-header">
                                     <h2>F.A.Q.</h2>
